--- a/Testo/Testo.csproj
+++ b/Testo/Testo.csproj
@@ -81,12 +81,6 @@
     <Compile Include="Forms\AboutForm.Designer.cs">
       <DependentUpon>AboutForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\Components\ButtonSelector.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Forms\Components\ButtonSelector.Designer.cs">
-      <DependentUpon>ButtonSelector.cs</DependentUpon>
-    </Compile>
     <Compile Include="Forms\SetUp.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -163,9 +157,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Forms\AboutForm.resx">
       <DependentUpon>AboutForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Forms\Components\ButtonSelector.resx">
-      <DependentUpon>ButtonSelector.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\SetUp.resx">
       <DependentUpon>SetUp.cs</DependentUpon>
@@ -262,7 +253,9 @@
     <None Include="imgs\FileExclude_16x1.png" />
     <None Include="imgs\FileExclude_16x.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Forms\Components\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
